--- a/inst/lessons/github_publishing.qmd
+++ b/inst/lessons/github_publishing.qmd
@@ -1,13 +1,12 @@
 ---
-execute: 
-  eval: false
-  warning: false
+title: Publishing to the Web
 ---
 
-
-## Learning Objectives {.unnumbered}
+:::{.callout-tip}
+## Learning Objectives
 
 - How to use Git, GitHub (+Pages), and Quarto to publish an analysis to the web
+:::
 
 ## Introduction
 
@@ -25,29 +24,29 @@ Quarto, in particular, is amazingly powerful for creating scientific reports but
 
 In this lesson, we're going to take our `training_{USERNAME}` GitHub repository and turn it into a beautiful and easy to read web page using the tools listed above.
 
-::: callout-tip
+::: {.callout-note}
 ## Set up
 
-0. Make sure you are in `training_{USERNAME}` project
+1. Make sure you are in `training_{USERNAME}` project
 
-1. Add a new Quarto file at the top level called `index.qmd`
+2. Add a new Quarto file at the top level called `index.qmd`
 
     a. Go to the RStudio menu  File -> New File -> Quarto Document
     b. This will bring up a dialog box. Add the title "GitHub Pages Example", keep the Default Output Format as "HTML", and then click "OK"
     
-2. Save the Quarto Document you just created. Use `index.qmd` as the file name
+3. Save the Quarto Document you just created. Use `index.qmd` as the file name
     a. Be sure to use the exact case (**lower case "index"**) as different operating systems handle case differently and it can interfere with loading your web page later
 
-3. Press "Render" and observe the rendered output
+4. Press "Render" and observe the rendered output
     a. Notice the new file in the same directory `index.html`
     b. This is our Quarto file rendered as `HTML` (a web page)
     
-4. Commit your changes (for both `index.qmd` and `index.html`) with a commit message, and `push` to GitHub
+5. Commit your changes (for both `index.qmd` and `index.html`) with a commit message, and `push` to GitHub
     a. If you have a folder called `index_files`, commit this as well. This folder contains the all the formatting and display settings for your html page. 
 
-5. Open your web browser to the [github.com](https://github.com/) and navigate to the page for your `training_{USERNAME}` repository
+6. Open your web browser to the [github.com](https://github.com/) and navigate to the page for your `training_{USERNAME}` repository
 
-6. Activate GitHub Pages for the `main` branch 
+7. Activate GitHub Pages for the `main` branch 
     a. Go to Settings -> Pages (underneath the Code and Automation section)
     b. Keep the "Source" as "Deploy from a branch"
     c. Under "Branch" you'll see a message that says "GitHub Pages is currently disabled". To change this, change the branch from "None" to `main`. Keep the folder as the `root` and then click "Save"
@@ -71,7 +70,7 @@ Note that it changes from **github.com** to **github.io**
 Now that we've successfully published a web page from an Quarto Document, let's make a change to our Quarto Document and follow the steps to publish the change on the web:
 
 
-::: callout-note
+::: {.callout-note}
 ## Update content in your published page
 
 - Go back to your `index.qmd`
@@ -84,8 +83,7 @@ Now that we've successfully published a web page from an Quarto Document, let's 
 
 Next, we will show how you can link different `qmd`'s rendered into `html` so you can easily share different parts of your work. 
 
-::: callout-note
-## Exercise
+::: {.callout-exercise}
 
 In this exercise, you'll create a table of contents with the lessons of this course on the main page, and link some of the files we have work on so far.
 
