--- a/inst/lessons/r_data_visualization.qmd
+++ b/inst/lessons/r_data_visualization.qmd
@@ -1,9 +1,15 @@
-## Learning Objectives {.unnumbered}
+---
+title: Data Visualization
+---
+
+:::{.callout-tip}
+## Learning Objectives
 
 
 - Understand the fundamentals of how the `ggplot2` package works
 - Use `ggplot2`'s `theme` and other customization functions create publication-grade graphics
 - Introduce the `leaflet` and `DT` package to create interactive maps and tables respectively
+:::
 
 ## Overview
 
@@ -15,7 +21,7 @@ From the [home page](http://ggplot2.tidyverse.org/):
 
 It's been around for years and has pretty good documentation and tons of example code around the web (like on [StackOverflow](https://stackoverflow.com/questions/tagged/ggplot2)). The goal of this lesson is to explain the fundamentals of how `ggplot2` work, introduce useful functions for customizing your plots and inspire you to go and explore this awesome resource for visualizing your data.
 
-::: callout-important
+::: callout-note
 
 ## `ggplot2` vs base graphics in R vs others
 There are many different ways to plot your data in R. All of them work! However, `ggplot2` excels at making complicated plots easy and easy plots simple enough
@@ -65,8 +71,7 @@ delta_visits_raw <- read_csv("https://portal.edirepository.org/nis/dataviewer?pa
 
 4. Finally, let's explore the data we just read into our working environment. 
 
-```{r}
-#| eval: false
+```r
 ## Check out column names
 
 colnames(delta_visits_raw)
@@ -136,14 +141,11 @@ head(visits_long)
 
 
 
-::: callout-note
-### Exercise
-
+::: callout-exercise
 
 - Calculate the daily visits by `restore_loc`, `date`, and `visitor_type`.
 
-
-:::
+:::{.callout-answer}
  
 ```{r mean_esc}
 #| message: false
@@ -157,12 +159,16 @@ head(daily_visits_loc)
 
 The chunk above uses some of the dplyr functions that we've used in the past. We use `group_by()` to indicate that we want to calculate our results for the unique combinations of type of visit, restoration location proximity, and day.  We next use `summarise()` to calculate an daily visit value for each of these groups. Note we use the `%in%` operator to pipe in the result of one command as an argument to the next one.
 
+:::
+
+:::
+
 ## Plotting with `ggplot2`
 
-### Essentials components
+### Essential components
 First, we’ll cover some `ggplot2` basics to create the foundation of our plot. Then, we’ll add on to make our great customized data visualization.
 
-::: {.callout-caution icon=false}
+::: {.callout-tip}
 
 ### The basics
 
@@ -180,9 +186,7 @@ To add layers to our plot, for example, additional geometries/aesthetics and the
 Now, let's plot total daily visits by restoration location. We will show this by creating the same plot in 3 slightly different ways. Each of the options below have the 4 essential pieces of a `ggplot`.
 
 
-```{r basic_esc_plot}
-#| eval: false
-
+```r
 ## Option 1 - data and mapping called in the ggplot() function
 ggplot(data = daily_visits_loc,
        aes(x = restore_loc, y = daily_visits)) +
@@ -205,9 +209,7 @@ They all will create the same plot:
 
 (Apologies for the jumbled text on the x-axis, we will learn how to make this look better soon)
 
-```{r esc_plot}
-#| echo: false
-
+```r
 ggplot(data = daily_visits_loc,
        aes(x = restore_loc, y = daily_visits)) +
     geom_col()
@@ -219,7 +221,7 @@ ggplot(data = daily_visits_loc,
 Having the basic structure with the essential components in mind, we can easily change the type of graph by updating the `geom_*()`.
 
 
-::: callout-important
+::: callout-warning
 ### `ggplot2` and the pipe operator
 
 Just like in `dplyr` and `tidyr`, we can also pipe a `data.frame` directly into the first argument of the `ggplot` function using the `%>%` operator.
@@ -305,9 +307,9 @@ ggplot(data = daily_visits_loc,
 
 ```
 
-::: {.callout-caution icon=false}
+::: {.callout-tip}
 
-#### Keep in mind
+### Keep in mind
 
 - If you want to map a variable onto a graph aesthetic (e.g., point color should be based on a specific region), put it within `aes()`.
 
@@ -404,20 +406,14 @@ ggplot(data = daily_visits_loc,
 ```
 
 
-::: callout-note
-#### Exercise
+::: {.callout-exercise}
 
 What changes do you expect to see in your plot by adding the following line of code? Discuss with your neighbor and then try it out!
 
 `scale_x_continuous(breaks = seq(0,120, 20))`
 
-:::
-
-
+::: {.callout-answer}
 ```{r}
-#| code-fold: true
-#| code-summary: "Answer"
-
 ggplot(data = daily_visits_loc,
        aes(y = restore_loc, x = daily_visits, fill = visitor_type)) +
     geom_col() +
@@ -428,8 +424,11 @@ ggplot(data = daily_visits_loc,
          subtitle = "Sum of all visits during study period") +
     scale_x_continuous(breaks = seq(0,120, 20)) +
     my_theme
-
 ```
+:::
+
+
+
 
 Finally we are going to expand the bars all the way to the axis line. In other words, remove the gap between the bars and the vertical "x-axis" line.
 
@@ -537,8 +536,7 @@ Saving plots using `ggplot` is easy! The `ggsave()` function will save either th
 
 For example, if we want to save our current plot to an existing folder named "figures", we can do this:
 
-```{r}
-#| eval: false
+```r
 ggsave("figures/visit_restore_site_delta.jpg", width = 12, height = 6, units = "in")
 ```
 
@@ -575,10 +573,8 @@ facet_plot
 
 We can save this plot to our figures folder too. Note that this time we are specifically mentioning the object we want to save.
 
-```{r}
-#| eval: false
-
-ggsave("figures/visit_restore_site_facet.jpg", facet_plot, width = 12, height = 8, units = "in")
+```r
+ggsave("figures/visit_restore_site_facet.jpg", plot = facet_plot, width = 12, height = 8, units = "in")
 
 ```
 
